z-index problem fixed

--- a/Project/scss/main.scss
+++ b/Project/scss/main.scss
@@ -158,7 +158,7 @@ main {
       margin: auto;
       width: 50vh;
       height: 50vh;
-      z-index: -1;
+      z-index: 0;
     }
   }
 }
